* Fixed a possible crash when removing and adding items from a window. * This does not yet close bug #233, but could also be a reason for this crash.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16851 a95241bf-73f2-0310-859d-f6bbb57e9c96